# awesome-rs

./: .gitmodules  Cargo.toml  Makefile  flake.nix
.github/workflows/: build_nix.yml
src/: action.rs  drag_window.rs  event_loop.rs  layout.rs  lib.rs  main.rs  mode.rs  my_objc.rs  window.rs  window_manager.rs
