[package]
name = "awesome-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accessibility = "0.1.6"
accessibility-sys = "0.1.3"
core-foundation = "0.9.4"
core-graphics = "0.23.1"

[patch.crates-io]
accessibility = { path = "./vendor/accessibility/accessibility" }
accessibility-sys = { path = "./vendor/accessibility/accessibility-sys" }
core-foundation = { path = "./vendor/core-foundation-rs/core-foundation" }
core-foundation-sys = { path = "./vendor/core-foundation-rs/core-foundation-sys" }
core-graphics = { path = "./vendor/core-foundation-rs/core-graphics" }
core-graphics-types = { path = "./vendor/core-foundation-rs/core-graphics-types" }