[package]
name = "awesome-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accessibility = "0.1.6"
accessibility-sys = "0.1.3"
anyhow = "1.0.81"
cocoa = "0.25.0"
core-foundation = "0.9.4"
core-graphics = "0.23.1"
objc2  = "*"

[dependencies.objc2-app-kit]
features = [ "NSApplication", "NSResponder", "NSRunningApplication"]

[dependencies.objc2-foundation]
features = [ "NSString", "NSNotification", "NSThread" ]

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[patch.crates-io]
accessibility = { path = "./vendor/accessibility/accessibility" }
accessibility-sys = { path = "./vendor/accessibility/accessibility-sys" }
cocoa = { path = "./vendor/core-foundation-rs/cocoa" }
cocoa-foundation = { path = "./vendor/core-foundation-rs/cocoa-foundation" }
core-foundation = { path = "./vendor/core-foundation-rs/core-foundation" }
core-foundation-sys = { path = "./vendor/core-foundation-rs/core-foundation-sys" }
core-graphics = { path = "./vendor/core-foundation-rs/core-graphics" }
core-graphics-types = { path = "./vendor/core-foundation-rs/core-graphics-types" }
